Add generated code from Deep Agent Forgex: README.md