@@ -1,515 +1,459 @@
-# FNOL (First Notice of Loss) System
+# SSP Inbound Client System
 
-A comprehensive Property & Casualty Insurance FNOL system built with modern microservices architecture using Java 21, Spring Boot 3.4.5, and cloud-native technologies.
+A production-ready .NET Core 8 microservice for processing inbound client requests with comprehensive validation, transformation, and routing capabilities.
 
 ## 🏗️ Architecture Overview
 
-The FNOL system is designed as a cloud-native microservices architecture that modernizes legacy COBOL-based insurance claim processing. The system enables efficient management of insurance policies, claims processing, adjuster assignments, coverage validation, and comprehensive reporting capabilities.
+The SSP Inbound Client System implements a microservices architecture with the following key components:
 
-### Key Features
-
-- **Microservices Architecture**: Domain-driven design with loosely coupled services
-- **Event-Driven Architecture**: Asynchronous communication using CQRS and Event Sourcing
-- **Cloud-Native Design**: Containerized deployment with Kubernetes orchestration
-- **API-First Approach**: RESTful APIs with OpenAPI 3.1.0 specifications
-- **Security by Design**: Multi-layered security with JWT authentication and OAuth2
-- **Scalability & Resilience**: Horizontal scaling with circuit breaker patterns
-
-## 🛠️ Technology Stack
-
-| Component | Technology | Version | Purpose |
-|-----------|------------|---------|---------|
-| **Runtime** | Java | 21 (LTS) | Application runtime environment |
-| **Framework** | Spring Boot | 3.4.5 | Microservices framework |
-| **Web Framework** | Spring WebMVC | 6.2.7 | REST API development |
-| **Data Access** | Spring Data JPA | 3.4.5 | Database abstraction layer |
-| **Security** | Spring Security | 6.4.4 | Authentication & authorization |
-| **Service Discovery** | Netflix Eureka | Latest | Service registration & discovery |
-| **API Gateway** | Spring Cloud Gateway | Latest | Request routing & load balancing |
-| **Configuration** | Spring Cloud Config | Latest | Centralized configuration |
-| **Database** | MySQL | 9.4.0 | Primary data storage |
-| **Caching** | Redis | 8.2.1 | In-memory caching |
-| **Messaging** | RabbitMQ | 3.13.0 | Event-driven communication |
-| **Authentication** | JWT | java-jwt | Stateless authentication |
-| **Documentation** | OpenAPI/Swagger | 3.1.0 | API documentation |
-| **Build Tool** | Maven | 3.9.11 | Dependency management |
-| **Containerization** | Docker | Latest | Application packaging |
-| **Orchestration** | Kubernetes | 1.28+ | Container orchestration |
-
-## 🏢 System Architecture
-
-```
-┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
-│   Web Client    │    │  Mobile Client  │    │  API Clients    │
-└─────────┬───────┘    └─────────┬───────┘    └─────────┬───────┘
-          │                      │                      │
-          └──────────────────────┼──────────────────────┘
-                                 │
-                    ┌─────────────┴─────────────┐
-                    │      API Gateway          │
-                    │  (Spring Cloud Gateway)   │
-                    └─────────────┬─────────────┘
-                                  │
-        ┌─────────────────────────┼─────────────────────────┐
-        │                         │                         │
-┌───────▼────────┐    ┌──────────▼──────────┐    ┌─────────▼────────┐
-│ User Service   │    │   Policy Service    │    │  Claim Service   │
-│ (Auth & Users) │    │ (Policy Management) │    │ (FNOL Processing)│
-└────────────────┘    └─────────────────────┘    └──────────────────┘
-        │                         │                         │
-        └─────────────────────────┼─────────────────────────┘
-                                  │
-        ┌─────────────────────────┼─────────────────────────┐
-        │                         │                         │
-┌───────▼────────┐    ┌──────────▼──────────┐    ┌─────────▼────────┐
-│Adjuster Service│    │  Coverage Service   │    │ Report Service   │
-│ (Assignments)  │    │ (Validation Rules)  │    │ (Analytics)      │
-└────────────────┘    └─────────────────────┘    └──────────────────┘
-        │                         │                         │
-        └─────────────────────────┼─────────────────────────┘
-                                  │
-                    ┌─────────────▼─────────────┐
-                    │  Notification Service     │
-                    │ (Multi-channel Alerts)    │
-                    └───────────────────────────┘
-```
-
-## 📋 Prerequisites
-
-- **Java 21** (OpenJDK or Oracle JDK)
-- **Maven 3.9+**
-- **Docker 20.10+**
-- **Docker Compose 2.0+**
-- **Kubernetes 1.28+** (for production deployment)
-- **kubectl** (for Kubernetes management)
+- **API Gateway Layer**: Request routing, rate limiting, and middleware
+- **Processing Engine**: Orchestrates validation, transformation, and routing
+- **Validation Service**: Business rules and data validation
+- **Transformation Service**: Data mapping and format conversion
+- **Routing Service**: Destination routing (HTTP, Message Queue, Database, File)
+- **Caching Layer**: Multi-level caching with Redis and in-memory cache
+- **Data Layer**: Entity Framework Core with SQL Server
+- **Monitoring**: Application Insights integration with structured logging
 
 ## 🚀 Quick Start
 
-### 1. Clone the Repository
-
-```bash
-git clone https://github.com/your-org/fnol-system.git
-cd fnol-system
-```
-
-### 2. Build All Services
-
-```bash
-# Build all microservices
-mvn clean package -DskipTests
-
-# Or build with Docker images
-mvn clean package -Pdocker
-```
-
-### 3. Start with Docker Compose (Recommended for Development)
-
-```bash
-# Start all services and infrastructure
-docker-compose up -d
-
-# Check service status
-docker-compose ps
-
-# View logs
-docker-compose logs -f api-gateway
-```
-
-### 4. Access the System
-
-- **API Gateway**: http://localhost:8080
-- **Eureka Dashboard**: http://localhost:8761
-- **Config Server**: http://localhost:8888
-- **Grafana Dashboard**: http://localhost:3000 (admin/admin)
-- **Prometheus**: http://localhost:9090
-- **RabbitMQ Management**: http://localhost:15672 (guest/guest)
-
-## 🔧 Development Setup
-
-### Local Development Environment
-
-1. **Start Infrastructure Services**
-   ```bash
-   # Start only infrastructure (MySQL, Redis, RabbitMQ)
-   docker-compose up -d mysql redis rabbitmq
-   ```
-
-2. **Run Services Individually**
-   ```bash
-   # Start Eureka Server
-   cd eureka-server && mvn spring-boot:run
-
-   # Start Config Server
-   cd config-server && mvn spring-boot:run
-
-   # Start API Gateway
-   cd api-gateway && mvn spring-boot:run
-
-   # Start individual microservices
-   cd user-service && mvn spring-boot:run
-   cd policy-service && mvn spring-boot:run
-   ```
-
-### Environment Configuration
-
-Create environment-specific configuration files:
-
-```bash
-# Development environment
-export SPRING_PROFILES_ACTIVE=dev
-export MYSQL_HOST=localhost
-export REDIS_HOST=localhost
-export RABBITMQ_HOST=localhost
-
-# Docker environment
-export SPRING_PROFILES_ACTIVE=docker
-
-# Kubernetes environment
-export SPRING_PROFILES_ACTIVE=kubernetes
-```
-
-## 🐳 Docker Deployment
-
-### Build Docker Images
-
-```bash
-# Build all service images
-docker-compose build
-
-# Build specific service
-docker build -t fnol/user-service:1.0.0 \
-  --build-arg JAR_FILE=user-service/target/user-service-1.0.0.jar .
-```
-
-### Docker Compose Profiles
-
-```bash
-# Development profile (minimal services)
-docker-compose --profile dev up -d
-
-# Full profile (all services + monitoring)
-docker-compose --profile full up -d
-
-# Production profile (optimized for production)
-docker-compose --profile prod up -d
-```
-
-## ☸️ Kubernetes Deployment
-
 ### Prerequisites
 
+- .NET 8.0 SDK
+- Docker and Docker Compose
+- SQL Server (or use Docker container)
+- Redis (or use Docker container)
+
+### Development Setup
+
+1. **Clone and navigate to the project**
+   ```bash
+   cd code
+   ```
+
+2. **Copy environment configuration**
+   ```bash
+   cp .env.example .env
+   # Edit .env with your configuration values
+   ```
+
+3. **Start infrastructure services**
+   ```bash
+   docker-compose up -d sqlserver redis
+   ```
+
+4. **Run database migrations**
+   ```bash
+   cd src/SSPInboundClient
+   dotnet ef database update
+   ```
+
+5. **Start the application**
+   ```bash
+   dotnet run
+   ```
+
+6. **Access the API**
+   - API: http://localhost:5000
+   - Swagger UI: http://localhost:5000/swagger
+   - Health Check: http://localhost:5000/health
+
+### Docker Setup
+
+1. **Start all services**
+   ```bash
+   docker-compose up -d
+   ```
+
+2. **View logs**
+   ```bash
+   docker-compose logs -f ssp-inbound-client
+   ```
+
+3. **Stop services**
+   ```bash
+   docker-compose down
+   ```
+
+## 📋 API Documentation
+
+### Core Endpoints
+
+#### Process Inbound Request
+```http
+POST /api/v1/inbound/process
+Content-Type: application/json
+Authorization: Bearer <token>
+
+{
+  "correlationId": "12345-67890",
+  "clientId": "1",
+  "timestamp": "2024-01-01T12:00:00Z",
+  "requestType": "payment",
+  "payload": {
+    "amount": 100.00,
+    "currency": "USD",
+    "customerId": "CUST001"
+  },
+  "headers": {
+    "X-Source-System": "WebPortal"
+  },
+  "priority": "Normal",
+  "requiresCallback": false
+}
+```
+
+#### Get Processing Status
+```http
+GET /api/v1/inbound/status/{correlationId}
+Authorization: Bearer <token>
+```
+
+#### Batch Processing
+```http
+POST /api/v1/inbound/batch
+Content-Type: application/json
+Authorization: Bearer <token>
+
+[
+  {
+    "correlationId": "batch-001",
+    "clientId": "1",
+    "requestType": "notification",
+    // ... other fields
+  }
+]
+```
+
+#### Client Configuration
+```http
+GET /api/v1/clients/{clientId}/config
+PUT /api/v1/clients/{clientId}/config
+Authorization: Bearer <token>
+```
+
+#### System Health
+```http
+GET /api/v1/system/health
+GET /api/v1/system/metrics
+GET /api/v1/system/version
+```
+
+### Response Format
+
+#### Success Response
+```json
+{
+  "correlationId": "12345-67890",
+  "status": "Success",
+  "message": "Request processed successfully",
+  "data": {
+    "routingResult": "Processed",
+    "destination": "https://api.payment-service.com/v1/process",
+    "statusCode": 200
+  },
+  "processedAt": "2024-01-01T12:00:01Z",
+  "processingTimeMs": 150,
+  "transactionId": "TXN-789"
+}
+```
+
+#### Error Response
+```json
+{
+  "code": "VALIDATION_FAILED",
+  "message": "Request validation failed",
+  "correlationId": "12345-67890",
+  "errors": [
+    {
+      "field": "amount",
+      "code": "REQUIRED_FIELD",
+      "message": "Amount is required",
+      "severity": "Critical"
+    }
+  ],
+  "timestamp": "2024-01-01T12:00:00Z"
+}
+```
+
+## ⚙️ Configuration
+
+### Application Settings
+
+Key configuration sections in `appsettings.json`:
+
+```json
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SSPInboundClientDb;Trusted_Connection=true;",
+    "Redis": "localhost:6379"
+  },
+  "AzureAd": {
+    "TenantId": "your-tenant-id",
+    "ClientId": "your-client-id"
+  },
+  "RateLimiting": {
+    "DefaultRequestsPerMinute": 1000,
+    "BurstRequestsPerMinute": 2000
+  },
+  "Processing": {
+    "MaxConcurrentRequests": 10,
+    "RequestTimeoutMs": 30000,
+    "RetryAttempts": 3
+  },
+  "Cache": {
+    "DefaultExpirationMinutes": 60,
+    "ClientConfigExpirationMinutes": 30
+  }
+}
+```
+
+### Environment Variables
+
+For production deployment, use environment variables:
+
 ```bash
-# Create namespaces
-kubectl apply -f k8s/config/namespaces.yaml
+# Database
+ConnectionStrings__DefaultConnection="Server=prod-sql;Database=SSPInboundClientDb;..."
+ConnectionStrings__Redis="prod-redis:6379"
 
-# Apply secrets and config maps
-kubectl apply -f k8s/config/secrets.yaml
+# Azure Services
+AzureAd__TenantId="prod-tenant-id"
+ApplicationInsights__ConnectionString="InstrumentationKey=prod-key"
+
+# Application Settings
+RateLimiting__DefaultRequestsPerMinute=5000
+Processing__MaxConcurrentRequests=50
 ```
 
-### Deploy Infrastructure
+## 🔒 Security
 
-```bash
-# Deploy MySQL
-kubectl apply -f k8s/infrastructure/mysql.yaml
+### Authentication & Authorization
 
-# Deploy Redis
-kubectl apply -f k8s/infrastructure/redis.yaml
+The system uses Azure Entra (Azure AD) for authentication:
 
-# Deploy RabbitMQ
-kubectl apply -f k8s/infrastructure/rabbitmq.yaml
+1. **JWT Token Authentication**: All API endpoints require valid JWT tokens
+2. **API Key Authentication**: Alternative authentication for service-to-service calls
+3. **Role-Based Access Control**: Different access levels for different client types
 
-# Deploy Eureka and Config Server
-kubectl apply -f k8s/infrastructure/eureka-config.yaml
+### Security Headers
+
+Implemented security headers:
+- `X-Frame-Options: SAMEORIGIN`
+- `X-Content-Type-Options: nosniff`
+- `X-XSS-Protection: 1; mode=block`
+- `Referrer-Policy: strict-origin-when-cross-origin`
+
+### Rate Limiting
+
+- Default: 1000 requests/minute per client
+- Burst: 2000 requests/minute for short periods
+- IP-based limiting for unauthenticated requests
+
+## 📊 Monitoring & Observability
+
+### Application Insights Integration
+
+- **Request Tracking**: All HTTP requests are tracked
+- **Dependency Tracking**: Database, Redis, and HTTP calls
+- **Exception Tracking**: Automatic exception logging
+- **Custom Metrics**: Business metrics and performance counters
+
+### Structured Logging
+
+Using Serilog with structured logging:
+
+```csharp
+_logger.LogInformation("Request processed for {CorrelationId} in {Duration}ms", 
+    correlationId, duration);
 ```
-
-### Deploy Application Services
-
-```bash
-# Deploy API Gateway
-kubectl apply -f k8s/services/api-gateway.yaml
-
-# Deploy microservices
-kubectl apply -f k8s/services/user-service.yaml
-kubectl apply -f k8s/services/policy-service.yaml
-kubectl apply -f k8s/services/claim-service.yaml
-kubectl apply -f k8s/services/adjuster-service.yaml
-kubectl apply -f k8s/services/coverage-service.yaml
-kubectl apply -f k8s/services/report-service.yaml
-kubectl apply -f k8s/services/notification-service.yaml
-```
-
-### Monitoring and Observability
-
-```bash
-# Deploy Prometheus and Grafana
-kubectl apply -f k8s/monitoring/prometheus.yaml
-kubectl apply -f k8s/monitoring/grafana.yaml
-
-# Deploy Jaeger for distributed tracing
-kubectl apply -f k8s/monitoring/jaeger.yaml
-```
-
-## 🔐 Security Configuration
-
-### JWT Configuration
-
-```yaml
-jwt:
-  secret: ${JWT_SECRET:your-secret-key}
-  expiration: 86400 # 24 hours
-  refresh-expiration: 604800 # 7 days
-```
-
-### Database Security
-
-```yaml
-spring:
-  datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:fnol_db}?useSSL=true&requireSSL=true
-    username: ${MYSQL_USERNAME:fnol_user}
-    password: ${MYSQL_PASSWORD:fnol_password}
-```
-
-### API Security
-
-All API endpoints are secured except:
-- `/api/v1/auth/login`
-- `/api/v1/auth/register`
-- `/actuator/health`
-- `/swagger-ui/**`
-- `/v3/api-docs/**`
-
-## 📊 Monitoring and Observability
-
-### Metrics Collection
-
-- **Application Metrics**: Micrometer + Prometheus
-- **Infrastructure Metrics**: Node Exporter
-- **Custom Business Metrics**: Policy creation rate, claim processing time
-
-### Distributed Tracing
-
-- **Jaeger**: End-to-end request tracing
-- **Correlation IDs**: Request correlation across services
-
-### Logging
-
-- **Structured Logging**: JSON format with correlation IDs
-- **Log Aggregation**: ELK Stack (Elasticsearch, Logstash, Kibana)
-- **Log Levels**: INFO, WARN, ERROR with appropriate filtering
 
 ### Health Checks
 
-```bash
-# Check service health
-curl http://localhost:8080/actuator/health
+- **Database**: SQL Server connectivity
+- **Cache**: Redis connectivity
+- **External Services**: Dependent service health
 
-# Check detailed health with authentication
-curl -H "Authorization: Bearer <token>" \
-  http://localhost:8080/actuator/health/detailed
+Access health checks at `/health`
+
+### Metrics
+
+Key metrics tracked:
+- Request count by client and status
+- Processing time by operation
+- Error rates by component
+- Cache hit rates
+- Throughput (requests/second)
+
+## 🗄️ Database Schema
+
+### Core Tables
+
+- **CLIENT**: Client information and configuration
+- **REQUEST_LOG**: All processed requests
+- **PROCESSING_RULE**: Validation and transformation rules
+- **CLIENT_CONFIGURATION**: Client-specific settings
+- **AUDIT_LOG**: System audit trail
+- **ERROR_LOG**: Error tracking
+- **TRANSFORMATION_MAPPING**: Data transformation rules
+
+### Migrations
+
+```bash
+# Create new migration
+dotnet ef migrations add MigrationName
+
+# Update database
+dotnet ef database update
+
+# Generate SQL script
+dotnet ef migrations script
 ```
+
+## 🔄 Processing Flow
+
+1. **Request Reception**: API receives inbound request
+2. **Authentication**: Validate client credentials
+3. **Rate Limiting**: Check request limits
+4. **Validation**: Apply business rules and data validation
+5. **Transformation**: Convert data formats and apply mappings
+6. **Routing**: Route to appropriate destination (HTTP/Queue/DB/File)
+7. **Response**: Return processing result
+8. **Logging**: Record request and audit information
+
+## 🚀 Deployment
+
+### Development
+```bash
+docker-compose up -d
+```
+
+### Production
+```bash
+# Using production compose file
+docker-compose -f docker-compose.prod.yml up -d
+
+# Or deploy to Azure Container Instances
+az container create --resource-group myResourceGroup \
+  --name ssp-inbound-client \
+  --image myregistry.azurecr.io/ssp-inbound-client:latest
+```
+
+### Azure Deployment
+
+The application is designed for Azure deployment with:
+- **Azure App Service**: For hosting the API
+- **Azure SQL Database**: For data persistence
+- **Azure Redis Cache**: For caching
+- **Azure Service Bus**: For message queuing
+- **Azure Blob Storage**: For file storage
+- **Azure Key Vault**: For secrets management
+- **Application Insights**: For monitoring
 
 ## 🧪 Testing
 
 ### Unit Tests
-
 ```bash
-# Run unit tests for all services
-mvn test
-
-# Run tests for specific service
-cd user-service && mvn test
+dotnet test
 ```
 
 ### Integration Tests
-
 ```bash
-# Run integration tests with TestContainers
-mvn verify -Pintegration-tests
+# Start test environment
+docker-compose -f docker-compose.test.yml up -d
+
+# Run integration tests
+dotnet test --filter Category=Integration
 ```
 
-### API Testing
-
+### Load Testing
 ```bash
-# Import Postman collection
-# File: docs/postman/FNOL-API-Collection.json
-
-# Or use curl examples
-curl -X POST http://localhost:8080/api/v1/auth/login \
-  -H "Content-Type: application/json" \
-  -d '{"username":"admin","password":"password"}'
+# Using Artillery.js
+npm install -g artillery
+artillery run load-test.yml
 ```
 
-## 📈 Performance Tuning
+## 📈 Performance
 
-### JVM Optimization
+### Optimization Features
 
-```bash
-# Production JVM settings
-JAVA_OPTS="-XX:+UseContainerSupport \
-           -XX:MaxRAMPercentage=75.0 \
-           -XX:+UseG1GC \
-           -XX:+UseStringDeduplication \
-           -XX:+PrintGCDetails \
-           -XX:+PrintGCTimeStamps"
-```
+- **Multi-level Caching**: Memory + Redis caching
+- **Connection Pooling**: Optimized database connections
+- **Async Processing**: Non-blocking operations
+- **Batch Processing**: Efficient bulk operations
+- **Circuit Breaker**: Fault tolerance for external calls
+- **Retry Policies**: Automatic retry with exponential backoff
 
-### Database Optimization
+### Performance Targets
 
-```sql
--- MySQL optimization settings
-SET GLOBAL innodb_buffer_pool_size = 1073741824; -- 1GB
-SET GLOBAL max_connections = 200;
-SET GLOBAL query_cache_size = 268435456; -- 256MB
-```
+- **Response Time**: < 500ms (95th percentile)
+- **Throughput**: 1000+ requests/second
+- **Availability**: 99.9% uptime
+- **Error Rate**: < 0.1%
 
-### Redis Configuration
-
-```redis
-# Redis optimization
-maxmemory 512mb
-maxmemory-policy allkeys-lru
-save 900 1
-save 300 10
-save 60 10000
-```
-
-## 🔄 CI/CD Pipeline
-
-### GitHub Actions Workflow
-
-```yaml
-name: FNOL CI/CD Pipeline
-on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-      - run: mvn clean test
-      
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: mvn clean package -DskipTests
-      - run: docker build -t fnol/app:${{ github.sha }} .
-      
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - run: kubectl apply -f k8s/
-```
-
-## 🐛 Troubleshooting
+## 🔧 Troubleshooting
 
 ### Common Issues
 
-1. **Service Discovery Issues**
+1. **Database Connection Issues**
    ```bash
-   # Check Eureka registration
-   curl http://localhost:8761/eureka/apps
-   
-   # Restart service with debug logging
-   java -Dlogging.level.com.netflix.eureka=DEBUG -jar app.jar
+   # Check connection string
+   # Verify SQL Server is running
+   docker-compose logs sqlserver
    ```
 
-2. **Database Connection Issues**
+2. **Redis Connection Issues**
    ```bash
-   # Test MySQL connection
-   mysql -h localhost -u fnol_user -p fnol_db
-   
-   # Check connection pool metrics
-   curl http://localhost:8080/actuator/metrics/hikaricp.connections
+   # Check Redis connectivity
+   docker-compose logs redis
+   redis-cli ping
    ```
 
-3. **Memory Issues**
+3. **Authentication Issues**
    ```bash
-   # Check JVM memory usage
-   curl http://localhost:8080/actuator/metrics/jvm.memory.used
-   
-   # Generate heap dump
-   jcmd <pid> GC.run_finalization
-   jcmd <pid> VM.gc
+   # Verify Azure AD configuration
+   # Check JWT token validity
    ```
 
-### Log Analysis
+### Logging
 
+View application logs:
 ```bash
-# Follow application logs
-docker-compose logs -f user-service
+# Docker logs
+docker-compose logs -f ssp-inbound-client
 
-# Search for errors
-docker-compose logs user-service | grep ERROR
-
-# Check specific time range
-docker-compose logs --since="2024-01-01T10:00:00" user-service
+# Application Insights
+# Check Azure portal for detailed telemetry
 ```
-
-## 📚 API Documentation
-
-### Swagger UI
-
-Access interactive API documentation at:
-- **API Gateway**: http://localhost:8080/swagger-ui.html
-- **Individual Services**: http://localhost:808X/swagger-ui.html
-
-### API Endpoints
-
-| Service | Base URL | Description |
-|---------|----------|-------------|
-| User Service | `/api/v1/auth`, `/api/v1/users` | Authentication & user management |
-| Policy Service | `/api/v1/policies` | Policy management |
-| Claim Service | `/api/v1/claims`, `/api/v1/fnol` | Claim processing |
-| Adjuster Service | `/api/v1/adjusters`, `/api/v1/assignments` | Adjuster management |
-| Coverage Service | `/api/v1/coverage` | Coverage validation |
-| Report Service | `/api/v1/reports` | Report generation |
-| Notification Service | `/api/v1/notifications` | Notification management |
 
 ## 🤝 Contributing
 
 1. Fork the repository
-2. Create a feature branch (`git checkout -b feature/amazing-feature`)
-3. Commit your changes (`git commit -m 'Add amazing feature'`)
-4. Push to the branch (`git push origin feature/amazing-feature`)
-5. Open a Pull Request
+2. Create a feature branch
+3. Make changes with tests
+4. Submit a pull request
 
 ### Code Standards
 
-- Follow Java coding conventions
+- Follow C# coding conventions
 - Write unit tests for new features
-- Update documentation for API changes
-- Use conventional commit messages
+- Update documentation
+- Use structured logging
+- Follow SOLID principles
 
 ## 📄 License
 
-This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
+This project is licensed under the MIT License - see the LICENSE file for details.
 
 ## 📞 Support
 
 For support and questions:
-- **Email**: support@fnol-system.com
-- **Documentation**: https://docs.fnol-system.com
-- **Issues**: https://github.com/your-org/fnol-system/issues
-
-## 🗺️ Roadmap
-
-- [ ] **Phase 1**: Core FNOL functionality (Q1 2024)
-- [ ] **Phase 2**: Advanced analytics and ML integration (Q2 2024)
-- [ ] **Phase 3**: Mobile application (Q3 2024)
-- [ ] **Phase 4**: Third-party integrations (Q4 2024)
+- Create an issue in the repository
+- Contact the development team
+- Check the documentation wiki
 
 ---
 
-**Built with ❤️ by the FNOL Development Team**
+**Version**: 1.0.0  
+**Last Updated**: 2024-01-01  
+**Maintainer**: SSP Development Team
